# airbnb-2022

./: .prettierignore  pyproject.toml
bookings/migrations/: 0001_initial.py
categories/: views.py
categories/migrations/: 0001_initial.py
config/: settings.py  urls.py
direct_messages/migrations/: 0001_initial.py
experiences/migrations/: 0001_initial.py  0002_experience_category.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_house_pet_friendly.py  0002_initial.py
medias/: models.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py
reviews/: models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  views.py
rooms/migrations/: 0001_initial.py  0002_alter_amenity_options_room_name_and_more.py  0003_room_category.py  0004_alter_room_amenities_alter_room_category_and_more.py
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0002_alter_user_first_name_alter_user_last_name.py  0003_user_is_host_user_name.py
wishlists/migrations/: 0001_initial.py
