[tool.poetry]
name = "airbnb-back"
version = "0.1.0"
description = ""
authors = ["Captainna <leona8464@gmail.com>"]
readme = "README.md"
packages = [{include = "airbnb_back"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
